<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventCreation3">

    <TextView
        android:id="@+id/lbl_create3"
        style="@style/txtFasthandregular30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:text="@string/lbl_event_creation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/step3"
        style="@style/txtFondamentoitalic15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/lbl_step_3_3"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lbl_create3" />

    <TextView
        android:id="@+id/msg3"
        style="@style/txtFondamentoitalic15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/msg_choose_the_user"
        app:layout_constraintEnd_toEndOf="@id/step3"
        app:layout_constraintStart_toStartOf="@id/step3"
        app:layout_constraintTop_toBottomOf="@id/step3" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_kenisa_kbera"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:background="@color/gray_800"
        android:text="@string/msg_alkenisa_alkber"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/msg3"
        tools:layout_editor_absoluteX="20dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_kenisa_so8yara"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:background="@color/gray_800"
        android:text="@string/msg_alkenisa_also3"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/btn_kenisa_kbera"
        tools:layout_editor_absoluteX="20dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_msr7"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:background="@color/gray_800"
        android:text="@string/lbl_almsr7"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/btn_kenisa_so8yara"
        tools:layout_editor_absoluteX="20dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_ka3et_3aza"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:background="@color/gray_800"
        android:text="@string/lbl_ka3a_al3aza"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/btn_msr7"
        tools:layout_editor_absoluteX="20dp" />


    <ImageButton
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="20dp"
        android:src="@drawable/img_clock_41x41"
        android:id="@+id/back_btn2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_back"
        style="@style/txtFondamentoregular15"
        app:layout_constraintStart_toEndOf="@id/back_btn2"
        app:layout_constraintTop_toTopOf="@id/back_btn2"
        app:layout_constraintBottom_toBottomOf="@id/back_btn2"
        android:layout_marginEnd="20dp"
        android:textSize="30sp"
        tools:ignore="MissingConstraints" />



    <ImageButton
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/baseline_done_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="20dp"
        android:id="@+id/done_btn1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_done"
        style="@style/txtFondamentoregular15"
        app:layout_constraintEnd_toStartOf="@id/done_btn1"
        app:layout_constraintTop_toTopOf="@id/done_btn1"
        app:layout_constraintBottom_toBottomOf="@id/done_btn1"
        android:layout_marginEnd="20dp"
        android:textSize="30sp"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>