<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventCreation2">

    <TextView
        android:id="@+id/lbl_create2"
        style="@style/txtFasthandregular30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:text="@string/lbl_event_creation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/step2"
        style="@style/txtFondamentoitalic15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/lbl_step_2_3"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lbl_create2" />


    <TextView
        android:id="@+id/msg2"
        style="@style/txtFondamentoitalic15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/msg_choose_the_maps"
        app:layout_constraintEnd_toEndOf="@id/step2"
        app:layout_constraintStart_toStartOf="@id/step2"
        app:layout_constraintTop_toBottomOf="@id/step2" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/gray_800"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/msg2"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.AppCompatRadioButton
            style="@style/txtFondamentoitalic15"
            android:layout_width="match_parent"
            android:id="@+id/radio_alkenisa_alkber"
            android:layout_height="40dp"
            android:text="@string/msg_alkenisa_alkber"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <androidx.appcompat.widget.AppCompatRadioButton
            style="@style/txtFondamentoitalic15"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/msg_alkenisa_also3"
            android:textColor="@color/white"
            android:id="@+id/radio_alkenisa_also3"
            android:textSize="20dp" />
        <androidx.appcompat.widget.AppCompatRadioButton
            style="@style/txtFondamentoitalic15"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/lbl_ka3a_al3aza"
            android:textColor="@color/white"
            android:id="@+id/radio_ka3a_al3aza"
            android:textSize="20dp" />
        <androidx.appcompat.widget.AppCompatRadioButton
            style="@style/txtFondamentoitalic15"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:id="@+id/radio_elmsr7"
            android:text="@string/lbl_almsr7"
            android:textColor="@color/white"
            android:textSize="20dp" />

    </RadioGroup>


    <ImageButton
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="20dp"
        android:src="@drawable/img_clock"
        android:id="@+id/nxt_btn2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_next"
        style="@style/txtFondamentoregular15"
        app:layout_constraintEnd_toStartOf="@id/nxt_btn2"
        app:layout_constraintTop_toTopOf="@id/nxt_btn2"
        app:layout_constraintBottom_toBottomOf="@id/nxt_btn2"
        android:layout_marginEnd="20dp"
        android:textSize="20sp"
        tools:ignore="MissingConstraints" />


    <ImageButton
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="20dp"
        android:src="@drawable/img_clock_41x41"
        android:id="@+id/back_btn"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_back"
        style="@style/txtFondamentoregular15"
       app:layout_constraintStart_toEndOf="@id/back_btn"
        app:layout_constraintTop_toTopOf="@id/back_btn"
        app:layout_constraintBottom_toBottomOf="@id/back_btn"
        android:layout_marginEnd="20dp"
        android:textSize="20sp"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>