<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventCreation1">

    <TextView
        android:id="@+id/lbl_create"
        style="@style/txtFasthandregular30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:text="@string/lbl_event_creation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/step1"
        style="@style/txtFondamentoitalic15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/lbl_step_1_3"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lbl_create" />

    <TextView
        android:id="@+id/msg"
        style="@style/txtFondamentoitalic15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_enter_your_even"
        app:layout_constraintEnd_toEndOf="@id/step1"
        app:layout_constraintStart_toStartOf="@id/step1"
        app:layout_constraintTop_toBottomOf="@id/step1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/txtFondamentoregular15"
        app:layout_constraintTop_toBottomOf="@id/msg"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/lbl_event_name"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:id="@+id/txt_event_name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/txt_event_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/et_event_name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/txtFondamentoregular15"
        app:layout_constraintTop_toBottomOf="@id/et_event_name"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/lbl_start_time"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:id="@+id/txt_event_start_time"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/txt_event_start_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/et_event_start_time"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/txtFondamentoregular15"
        app:layout_constraintTop_toBottomOf="@id/et_event_start_time"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/lbl_end_time"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:id="@+id/txt_event_end_time"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/txt_event_end_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/et_event_end_time"/>


    <ImageButton
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="20dp"
        android:src="@drawable/img_clock"
        android:id="@+id/nxt_btn"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_next"
        style="@style/txtFondamentoregular15"
        app:layout_constraintEnd_toStartOf="@id/nxt_btn"
        app:layout_constraintTop_toTopOf="@id/nxt_btn"
        app:layout_constraintBottom_toBottomOf="@id/nxt_btn"
        android:layout_marginEnd="20dp"
        android:textSize="20sp"
        tools:ignore="MissingConstraints" />


    <ImageButton
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="20dp"
        android:src="@drawable/img_close"
        android:id="@+id/cancel_btn"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_cancel"
        style="@style/txtFondamentoregular15"
        app:layout_constraintStart_toEndOf="@id/cancel_btn"
        app:layout_constraintTop_toTopOf="@id/cancel_btn"
        app:layout_constraintBottom_toBottomOf="@id/cancel_btn"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>